--- a/src/CSharpx/CSharpx.csproj
+++ b/src/CSharpx/CSharpx.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Either.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="Maybe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
