--- a/src/CSharpx/CSharpx.csproj
+++ b/src/CSharpx/CSharpx.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Either.cs" />
     <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="Identity.cs" />
     <Compile Include="Maybe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit.cs" />
