Repository structure reorganized

--- a/src/CSharpx.Specs/CSharpx.Specs.csproj
+++ b/src/CSharpx.Specs/CSharpx.Specs.csproj
@@ -10,5 +10,5 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\CSharpx\CSharpx.csproj" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
