--- a/src/CSharpx/CSharpx.csproj
+++ b/src/CSharpx/CSharpx.csproj
@@ -24,8 +24,9 @@
   <ItemGroup>
     <None Include="../../assets/icon.png">
       <Pack>True</Pack>
-      <PackagePath></PackagePath>
+      <PackagePath>
+      </PackagePath>
     </None>
   </ItemGroup>
-  <Import Project="../../.paket/Paket.Restore.targets" />
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
