Added a test for Maybe.Try

--- a/tests/CSharpx.Specs/CSharpx.Specs.csproj
+++ b/tests/CSharpx.Specs/CSharpx.Specs.csproj
@@ -10,5 +10,5 @@
     <Authors>gsscoder</Authors>
     <Product>CSharpx</Product>
   </PropertyGroup>
-  <Import Project="../../.paket/Paket.Restore.targets" />
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
