--- a/src/CSharpx/CSharpx.csproj
+++ b/src/CSharpx/CSharpx.csproj
@@ -5,9 +5,9 @@
     <TargetFrameworks>netstandard2.0;net47</TargetFrameworks>
     <Title>Functional programming and other utilities for C#</Title>
     <Description>Functional programming and other utilities for C#</Description>
-    <Version>2.7.3</Version>
+    <Version>2.8.0-preview.1</Version>
     <Authors>gsscoder</Authors>
-    <Copyright>Copyright © Giacomo Stelluti Scala, 2015-2020</Copyright>
+    <Copyright>Copyright © Giacomo Stelluti Scala, 2015-2021</Copyright>
     <PackageProjectUrl>https://github.com/gsscoder/csharpx</PackageProjectUrl>
     <RepositoryUrl>https://github.com/gsscoder/csharpx</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
